--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
 <h1><center><a href = "index.html">장정아♥신정우</h1></a>
   <h2>소개</h2>
-  <p>그들은 4월 13일부터 연애를 시작하였다.<br>
-  그들은 쉽지 않은 연애를 하였다. 싸우기도 많이 싸우고<br>
- 무엇보다 장정아가 말을 듣지 않았다.</p><br><br>
+  <p>그들은 4월 13일부터 연애를 시작하였다.ing</p><br>
 </head>
 
 <body>
