--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <h1><center><a href = "index.html">장정아♥신정우</h1></a>
   <h2>소개</h2>
-  <p>그들은 4월 13일부터 연애를 시작하였다.ing</p><br>
+  <p>그들은 4월 13일부터 연애를 시작하였다.ing<br></p>
 </head>
 
 <body>
