수정 조건문,반복문 사용

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 </<!DOCTYPE html>
 <html>
-
 <head>
-<h1><center><a href = "index.html">장정아♥신정우</h1></a>
-  <h2>소개</h2>
-  <p>그들은 4월 13일부터 연애를 시작하였다.ing<br></p>
+  <title>WEB - JavaScript</title>
+  <meta charset="utf-8">
 </head>
-
 <body>
+  <h1><a href="index.html">WEB</a></h1>
 
-<h2><a href = "jeamaa.html">장정아</a></h2>
-<img src="장정아.jpg" width="150" ><br>
-
-<h2><a href = "jeamoo.html">신정우</a></h2>
-<img src="신정우.jpg" width="150" ><br>
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
 
 </body>
 </html>
