--- a/2.html
+++ b/2.html
@@ -1,30 +1,48 @@
-</<!DOCTYPE html>
+
+<!doctype html>
 <html>
 <head>
-  <title>WEB - JavaScript</title>
+  <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-
+  <input type="button" value="night" onclick="
+  var target = document.querySelector('body');
+  if(this.value === 'night'){
+   target.style.backgroundColor = 'black';
+   target.style.color = 'white';
+    this.value = 'day';
+        var alist = document.querySelectorAll('a');
+    var i =0;
+    while(i < alist.length){
+        console.log(alist[i]);
+        alist[i].style.color = 'powderblue';
+    i=i+1;
+    }
+  } else{
+   target.style.backgroundColor = 'white';
+   target.style.color = 'black';
+    this.value = 'night';
+        var alist = document.querySelectorAll('a');
+    var i =0;
+    while(i < alist.length){
+        console.log(alist[i]);
+        alist[i].style.color = 'blue';
+    i=i+1;
+    }
+  }
+  ">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <h2>JavaScript</h2>
+  <h2>CSS</h2>
   <p>
-  JavaScript often abbreviated as JS, is a high-level, dynamic,
-  weakly typed, prototype-based, multi-paradigm, and interpreted programming language.
-  Alongside HTML and CSS, JavaScript is one of the three core technologies
-  of World Wide Web content production. It is used to make webpages
-  interactive and provide online programs, including video games.
-  the majority of websites employ it, and all modern web browsers
-  support it without the need for plug-ins by means of a built-inJavaScriptengine.
-  Each of the manyJavaScriptengines represent a different implementation of
-  JavaScript, all based on the ECMAScript specification,
-  with some engines not supporting the spec fully, and with many engines
-  supporting additional features beyond ECMA.
+    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language. Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
   </p>
 </body>
 </html>
