--- a/3.html
+++ b/3.html
@@ -1,8 +1,11 @@
-</<!DOCTYPE html>
+
+<!doctype html>
 <html>
 <head>
-  <title>WEB - JavaScript</title>
+  <title>WEB1 - JavaScript</title>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="colors.js"></script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
@@ -12,7 +15,6 @@
    target.style.backgroundColor = 'black';
    target.style.color = 'white';
     this.value = 'day';
-
         var alist = document.querySelectorAll('a');
     var i =0;
     while(i < alist.length){
@@ -32,8 +34,7 @@
     i=i+1;
     }
   }
-">
-
+  ">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
@@ -41,18 +42,7 @@
   </ol>
   <h2>JavaScript</h2>
   <p>
-  JavaScript often abbreviated as JS, is a high-level, dynamic,
-  weakly typed, prototype-based, multi-paradigm, and interpreted programming language.
-  Alongside HTML and CSS, JavaScript is one of the three core technologies
-  of World Wide Web content production. It is used to make webpages
-  interactive and provide online programs, including video games.
-  the majority of websites employ it, and all modern web browsers
-  support it without the need for plug-ins by means of a built-inJavaScriptengine.
-  Each of the manyJavaScriptengines represent a different implementation of
-  JavaScript, all based on the ECMAScript specification,
-  with some engines not supporting the spec fully, and with many engines
-  supporting additional features beyond ECMA.
+    JavaScript (/ˈdʒɑːvəˌskrɪpt/[6]), often abbreviated as JS, is a high-level, dynamic, weakly typed, prototype-based, multi-paradigm, and interpreted programming language. Alongside HTML and CSS, JavaScript is one of the three core technologies of World Wide Web content production. It is used to make webpages interactive and provide online programs, including video games. The majority of websites employ it, and all modern web browsers support it without the need for plug-ins by means of a built-in JavaScript engine. Each of the many JavaScript engines represent a different implementation of JavaScript, all based on the ECMAScript specification, with some engines not supporting the spec fully, and with many engines supporting additional features beyond ECMA.
   </p>
 </body>
-
 </html>
