--- a/3.html
+++ b/3.html
@@ -4,37 +4,49 @@
 <head>
   <title>WEB1 - JavaScript</title>
   <meta charset="utf-8">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="colors.js"></script>
+  <script>
+  var Links = {
+    SetColor:function(color){
+      var alist = document.querySelectorAll('a');
+      var i = 0;
+      while(i < alist.length){
+          alist[i].style.color = color;
+          i = i + 1;
+      }
+  }
+}
+    var Body = {
+      SetColor:function(color){
+      document.querySelector('body').style.color = color;
+    },
+      SetBackgroundColor:function(color){
+        document.querySelector('body').style.backgroundColor = color;
+      }
+    }
+      function nightDayHandler(self){
+      var target = document.querySelector('body');
+      if(self.value === 'night'){
+        Body.SetBackgroundColor('black');
+        Body.SetColor('white');
+        self.value = 'day';
+
+        Links.SetColor("powderblue");
+      }
+      else {
+        Body.SetBackgroundColor('white');
+        Body.SetColor('black');
+        self.value = 'night';
+
+        Links.SetColor("blue");
+      }
+    }
+  </script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <input type="button" value="night" onclick="
-  var target = document.querySelector('body');
-  if(this.value === 'night'){
-   target.style.backgroundColor = 'black';
-   target.style.color = 'white';
-    this.value = 'day';
-        var alist = document.querySelectorAll('a');
-    var i =0;
-    while(i < alist.length){
-        console.log(alist[i]);
-        alist[i].style.color = 'powderblue';
-    i=i+1;
-    }
-  } else{
-   target.style.backgroundColor = 'white';
-   target.style.color = 'black';
-    this.value = 'night';
-        var alist = document.querySelectorAll('a');
-    var i =0;
-    while(i < alist.length){
-        console.log(alist[i]);
-        alist[i].style.color = 'blue';
-    i=i+1;
-    }
-  }
-  ">
+  <input type="button" value="night" style="float: right;" onclick="
+    nightDayHandler(this)
+    ">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
